# airl-market-making

./: .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  backtest_automation.ipynb  backtest_visualization.ipynb  imitation_airl.ipynb  main.ipynb  pyproject.toml  rl_generator.ipynb  shell.nix
.packages/imitation-1.0.0/: PKG-INFO  setup.cfg  setup.py
.packages/imitation-1.0.0/src/imitation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.packages/imitation-1.0.0/src/imitation/algorithms/: bc.py
.packages/imitation-1.0.0/src/imitation/algorithms/adversarial/: common.py
.packages/imitation-1.0.0/src/imitation/rewards/: reward_wrapper.py
.packages/stable_baselines3-2.2.1/: PKG-INFO
.packages/stable_baselines3-2.2.1/stable_baselines3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
.packages/stable_baselines3-2.2.1/stable_baselines3/common/: logger.py
.packages/stable_baselines3-2.2.1/tests/: test_her.py
data/automated_backtests/: results_2024-02-25_10-58-39.pickle  results_2024-02-25_15-16-39.pickle  results_2024-02-25_21-22-46.pickle
data/models/: 2024-01-21_17-12-35_reward_nn  2024-01-21_17-12-35_stats.pkl  2024-01-22_18-03-01_reward_nn  2024-01-22_18-03-01_stats.pkl  2024-01-23_19-14-27_reward_nn  2024-01-23_19-14-27_stats.pkl  2024-01-24_09-40-47_reward_nn  2024-01-24_09-40-47_stats.pkl  2024-01-24_22-39-37_best_9_297.5_learner  2024-01-24_22-39-37_best_9_297.5_reward_nn  2024-01-24_22-39-37_best_9_297.5_stats.pkl  2024-01-24_22-39-37_reward_nn  2024-01-24_22-39-37_stats.pkl
data/rollouts/rollouts.pkl/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/volume_distributions/: volumes_level_0.pkl  volumes_level_1.pkl  volumes_level_2.pkl
data_processing/: data_cleaning.ipynb  downloaders.py  order_book_data_analysis.ipynb  order_book_data_pipeline.ipynb  trade_data_analysis.ipynb  trade_data_pipeline.ipynb  utils.py  volume_analysis.ipynb
lob/: backtest_metrics.py  data.py  distributions.py  exchange.py  limit_order_book.py  order_queue.py  plots.py  time.py  traders.py  utils.py
package_modifications/: imitation_adversarial_common.py  imitation_bc.py  imitation_reward_wrapper.py  sb3_common_utils.py  sb3_logger.py
rl/: actions.py  environments.py  experts.py  plotting.py  rewards.py
src/: data.py
src/lob/: __init__.py  backtest_metrics.py  commissions.py  data.py  distributions.py  exchange.py  limit_order_book.py  order_queue.py  orders.py  plots.py  traders.py
src/rl/: environments.py  experts.py  features.py  plotting.py  rewards.py  utils.py
