[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = "Reinforcement learning for high-frequency market making."
authors = ["Juraj Zelman"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.0"
setuptools = "66"
matplotlib = "^3.8.0"
sortedcontainers = "^2.4.0"
plotly = "^5.17.0"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"
polars = "^0.19.15"
pandas = "^2.1.1"
ipywidgets = "^8.1.1"
rich = "^13.6.0"
imitation = "^1.0.0"
stable-baselines3 = "^2.2.1"
pyllist = "^0.3"
sbx-rl = "^0.9.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
mypy = "^1.0.0"
ipykernel = "^6.25.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
safe = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 80

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]
